refactor: 9 some tests fixed